# CommunityMed

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  deploy_vps.sh  deploy_windows.ps1  docker-compose.yml  pyproject.toml  quick_deploy.sh  requirements.txt  run_local.ps1
config/: model_config.yaml  training_config.yaml
demo/: gradio_app.py
examples/: __init__.py  tb_screening_demo.py
notebooks/: 01_quickstart.ipynb  02_fine_tuning.ipynb
scripts/: benchmark.py  deploy.py  quantize.py  train.py
src/: __init__.py
src/agents/: __init__.py  audio_agent.py  clinical_agent.py  orchestrator.py  radiology_agent.py  triage_agent.py
src/api/: __init__.py  main.py
src/demo/: __init__.py  gradio_app.py
src/models/: __init__.py  fine_tuning.py  hear_loader.py  medgemma_loader.py  medsiglip_loader.py
src/utils/: __init__.py  impact_calculator.py
submission/: impact_analysis.md  video_script.md  writeup.md
tests/: test_agents.py  test_haidef_models.py
